fixed spacing and add Month, day, date

--- a/css/time.css
+++ b/css/time.css
@@ -9,8 +9,16 @@
 
 #clock{
 	text-align: center;
-	font-size: 100px;
+	font-size: 80px;
 	color: white;
 	font-family: "Arial", serif;
+	line-height: 0px;
+}
 
+#date{
+	text-align:center;
+	font-size: 40px;
+	color:#004953;
+	font-family: "Arial", serif;
+	
 }
